2009-11-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/Backtrace.cs: Add support for
	  refreshing object values.

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Backend/IObjectValueSource.cs:
	* Mono.Debugging.Evaluation/ArrayElementGroup.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Client/DebuggerSessionOptions.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs:
	* Mono.Debugging.Evaluation/ExpressionEvaluator.cs:
	* Mono.Debugging.Evaluation/AsyncOperationManager.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs: Add
	  support for refreshing object values. 

2009-11-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Client/DebuggerSessionOptions.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs:
	* Mono.Debugging.Evaluation/AsyncOperationManager.cs:
	* Mono.Debugging.Evaluation/AsyncEvaluationTracker.cs: Add an
	  Options argument to the methods that launch the debugger. By
	  default, run debugger operations in a background thread, to
	  avoid locking the main thread. Improve expression evaluation
	  timeout handling. If an evaluation can't be aborted, notify
	  the user and wait until done or stopped.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/Backtrace.cs: Fix list